tests/snapshots/regression/precedence__unary_binds_tighter.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/precedence/unary_binds_tighter.flx
exit_code: 1

• 4 errors • tests/fixtures/precedence/unary_binds_tighter.flx
error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  tests/fixtures/precedence/unary_binds_tighter.flx:1:1
  |
1 | print(-1 * 2);
  | ^^^^^^^^^^^^^^
  | -------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  tests/fixtures/precedence/unary_binds_tighter.flx:1:1
  |
1 | print(-1 * 2);
  | ^^^^^^^^^^^^^^
  | -------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


error[E415]: Missing Main Function (strict)

Strict mode requires `fn main()` for all programs.

  tests/fixtures/precedence/unary_binds_tighter.flx:1:1
  |
1 | print(-1 * 2);
  | ^^^^^^^^^^^^^^
2 | print(!true && false);
  | ^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Add `fn main() { ... }` as the program entrypoint.


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  tests/fixtures/precedence/unary_binds_tighter.flx:2:1
  |
2 | print(!true && false);
  | ^^^^^^^^^^^^^^^^^^^^^^
  | ---------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.

Found 4 errors.
